fix: scrollbar가 모달창을 가리는 이슈 해결

--- a/front/src/components/SideBar/style.module.css
+++ b/front/src/components/SideBar/style.module.css
@@ -5,8 +5,8 @@
 .sidebar_event_button button { background: rgb(255, 255, 255, 0.5); position: absolute; z-index: 2; } 
 .sidebar.close .sidebar_event_button { margin-left: 280px; } 
 .sidebar.close .sidebar_event_button button { width: 50px; height: 50px; border-radius: 100%; padding-left: 11px; } 
-.sidebar.close .sidebar_event_button button *:nth-child(n+2) {display: none; } 
+.sidebar.close .sidebar_event_button button *:nth-child(n+2) { display: none; } 
 
-.sidebar_calender { width: 95%; height: 100%; max-height: 82vh; padding-right: 10px; padding-bottom: 10px; text-align: center; overflow-y: overlay; overflow-x: hidden; } 
+.sidebar_calender { position: fixed; overflow-y: scroll; overflow-x: hidden; overscroll-behavior: contain; z-index: 10; width: 250px; height: 82vh; margin-right: 10px; padding-bottom: 10px; text-align: center; } 
 .sidebar_calender::-webkit-scrollbar-thumb { visibility: hidden; } 
-.sidebar_calender:hover.sidebar_calender::-webkit-scrollbar-thumb { visibility: visible;} 
+.sidebar_calender:hover.sidebar_calender::-webkit-scrollbar-thumb { visibility: visible; } 
